orderer-service/orderer0-svc.yaml
--- #---------------- Orderer0 Service ---------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orderer0
  name: orderer0
  namespace: hyperledger
spec:
  type: LoadBalancer
  ports:
    - name: "orderer"
      port: 7050
      targetPort: 7050
  selector:
    app: orderer0
---
#---------------- Orderer0 Metrics Service ---------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orderer0
    metrics-service: "true"
  name: orderer0-metrics
  namespace: hyperledger
spec:
  type: LoadBalancer
  ports:
    - name: "orderer-metrics"
      port: 8443
      targetPort: 8443
  selector:
    app: orderer0
