orderer-service/orderer2-svc.yaml
--- #---------------- Orderer0 Service ---------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orderer2
  name: orderer2
  namespace: hyperledger
spec:
  type: LoadBalancer
  ports:
    - name: "orderer"
      port: 7050
      targetPort: 7050
  selector:
    app: orderer2
---
#---------------- Orderer2 Metrics Service ---------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orderer2
    metrics-service: "true"
  name: orderer2-metrics
  namespace: hyperledger
spec:
  type: LoadBalancer
  ports:
    - name: "orderer-metrics"
      port: 8443
      targetPort: 8443
  selector:
    app: orderer2
