orderer-service/orderer0-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: orderer0
  name: orderer0
  namespace: hyperledger
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: orderer0
    servicePort: 7050
